--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Duet
+  site_title: Jeff3rsn
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -20,22 +20,22 @@ menu_settings:
 footer_settings:
   logo_image: 
   logo_width: 200
-  footer_tagline: A beautiful, minimal two-column portfolio Jekyll theme
+  footer_tagline: Espero que tenha gostado do que viu!
 
 grid_settings:
   overlay_opacity: 0.8
   grid_spacing: 10
 
 contact_settings:
-  form_action: 'https://formspree.io/your@email.com'
-  confirmation_url: '/thanks'
-  email_subject: 'Contact form submission'
-  send_button_text: 'Send Message'
+  form_action: 'https://formspree.io/maierjefferson@gmail.com'
+  confirmation_url: '/Obrigado!'
+  email_subject: 'Contato pelo site'
+  send_button_text: 'Enviar Mensagem'
 
 social_settings:
   facebook_url: 'https://www.facebook.com/jekyllthemes/'
   twitter_url: 'https://twitter.com/jekyllthemesio'
-  instagram_url: 'http://instagram.com'
+  instagram_url: 'http://instagram.com/jeff3rsn'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -46,8 +46,8 @@ social_settings:
   amazon_url: ''
   apple_url: ''
   android_url: ''
-  tumblr_url: 'http://tumblr.com'
-  dribbble_url: 'http://dribbble.com'
+  tumblr_url: ''
+  dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
   github_url: ''
